--- a/src/app/features/search-page/card/card.component.html
+++ b/src/app/features/search-page/card/card.component.html
@@ -3,6 +3,7 @@
 <!-- <app-loader *ngIf ="showLoaderNew"></app-loader> -->
 <div class="col-xs-12 col-md-12 mt-3 mt-md-4">
   <div class="card mb-3 cardshadow">
+    <div class="card-body">
     <div class="row no-gutters">
       <!-- Item image -->
       <div class="col-md-3 ">
@@ -36,8 +37,8 @@
       </div>
 
       <!-- Item content -->
-      <div class="col-md-6 ">
-        <div class="card-body">
+      <div class="col-md-6 pl-3" style="width:100%;">
+     
           <div class="row">
             <div class="col-auto">
               <h5 class="card-title" *ngIf="transactionData.productName">{{transactionData.productName}}</h5>
@@ -56,47 +57,46 @@
               <span class="cardcontent">{{transactionData.productId}}</span>
             </div>
           </div> -->
-          <div class="row" style="width:100%;margin-top: 5px;margin-bottom: 5px;" *ngIf="transactionData.identifier">
-            <div class="col-md-3 col-xs-12">
+          <div class="row" style="margin-top: 5px;margin-bottom: 5px;" *ngIf="transactionData.identifier">
+            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3">
               <span style="font-weight: 600">Identifier : </span>
             </div>
-            <div class="col-md-9 col-xs-12">
+            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
               <span class="cardcontent">{{transactionData.identifier}}</span>
             </div>
           </div>
-          <div class="row" style="width:100%;" *ngIf="transactionData.sender">
-            <div class="col-md-3 col-xs-12">
+          <div class="row" >
+            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3" *ngIf="transactionData.sender">
               <span style="font-weight: 600">Sender : </span>
             </div>
-            <div class="col-md-9 col-xs-12">
+            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
               <span class="cardcontent">{{transactionData.sender}}</span>
             </div>
           </div>
-          <div class="row" style="width:100%;" *ngIf="transactionData.receiver">
-            <div class="col-md-3 col-xs-12">
+          <div class="row" *ngIf="transactionData.receiver">
+            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3">
               <span style="font-weight: 600">Receiver : </span>
             </div>
-            <div class="col-md-9 col-xs-12">
+            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
               <span class="cardcontent">{{transactionData.receiver}}</span>
             </div>
           </div>
-          <div class="row" style="width:100%;" *ngIf="transactionData.timestamp">
-            <div class="col-md-3 col-xs-12">
+          <div class="row"  *ngIf="transactionData.timestamp">
+            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3" >
               <span style="font-weight: 600">Timestamp : </span>
             </div>
-            <div class="col-md-9 col-xs-12">
+            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
               <span class="cardcontent">{{transactionData.timestamp | date: 'medium'}}</span>
             </div>
           </div>
-          <div class="row" style="width:100%;" *ngIf="transactionData.transferType">
-            <div class="col-md-3 col-xs-12">
+          <div class="row" *ngIf="transactionData.transferType">
+            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3">
               <span style="font-weight: 600">Type : </span>
             </div>
-            <div class="col-md-9 col-xs-12">
+            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
               <span class="cardcontent">{{transactionData.transferType | titlecase}}</span>
             </div>
           </div>
-        </div>
       </div>
 
       <!-- Item button Need to fix -->
