--- a/src/app/features/search-page/card/card.component.html
+++ b/src/app/features/search-page/card/card.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid justify-content-center">
   <div class="card  cardshadow">
  
-    <div class="row m-3 no-gutters">
+    <div class="row cardMargin no-gutters">
       <!-- Item image -->
       <!-- <div class="col-md-3 align-self-center imageCardCenter">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -37,10 +37,10 @@
       </div> -->
 
       <!-- Item content -->
-      <div class="col-xs-12 col-sm-7 col-md-7 col-lg-8 col-xl-9">
+      <div class="col-xs-12 col-sm-7 col-md-9 col-lg-10 col-xl-10 ">
     
-          <div class="row">
-            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
+          <div class="row ">
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
               <h5 class="card-title font-weight-bold" *ngIf="transactionData.productName">{{transactionData.productName}}</h5>
               <h5 class="card-title" *ngIf="transactionData.assetCode">{{transactionData.assetCode}}</h5>
             </div>
@@ -58,51 +58,56 @@
             </div>
           </div> -->
           <div class="row contentMargin" *ngIf="transactionData.identifier">
-            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
-              <span style="font-weight: 600">Identifier : </span>
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
+              <span class="fieldStyle" >Identifier : </span>
             </div>
-            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-10 col-xl-9">
               <span class="cardcontent">{{transactionData.identifier}}</span>
             </div>
           </div>
           <div class="row contentMargin" >
-            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3" *ngIf="transactionData.sender">
-              <span style="font-weight: 600">Sender : </span>
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 " *ngIf="transactionData.sender">
+              <span class="fieldStyle" >Sender : </span>
             </div>
-            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-10 col-xl-9">
               <span class="cardcontent">{{transactionData.sender}}</span>
             </div>
           </div>
           <div class="row contentMargin" *ngIf="transactionData.receiver">
-            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
-              <span style="font-weight: 600">Receiver : </span>
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
+              <span class="fieldStyle" >Receiver : </span>
             </div>
-            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-10 col-xl-9">
               <span class="cardcontent">{{transactionData.receiver}}</span>
             </div>
           </div>
           <div class="row contentMargin"  *ngIf="transactionData.timestamp">
-            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3" >
-              <span style="font-weight: 600">Timestamp : </span>
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 " >
+              <span class="fieldStyle" >Timestamp : </span>
             </div>
-            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-10 col-xl-9">
               <span class="cardcontent">{{transactionData.timestamp | date: 'medium'}}</span>
             </div>
           </div>
           <div class="row contentMargin" *ngIf="transactionData.transferType">
-            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
-              <span style="font-weight: 600">Type : </span>
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
+              <span class="fieldStyle" >Type : </span>
             </div>
-            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-10 col-xl-9">
               <span class="cardcontent">{{transactionData.transferType | titlecase}}</span>
             </div>
           </div>
 
 </div>
       <!-- Item button Need to fix -->
-      <div class="col-xs-12 col-sm-5 col-md-5 col-lg-4 col-xl-3 align-self-center" style="text-align: center;">
-        <a [routerLink]="['/txn', transactionData.txnHash]"
-          class="btn btn-main btn-view btn-outline-primary btnFixSize">View Item</a>
+      <div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 col-xl-2  align-self-center justify-content-center">
+        <div class="row  justify-content-end viewButton">
+        
+          <a [routerLink]="['/txn', transactionData.txnHash]"
+            class="btn btn-main btn-view btn-outline-primary btnFixSize">View Item</a>
+       
+        </div>
+       
       </div>
     </div>
 
