--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -143,7 +143,7 @@
 
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4"
         *ngFor="let item of tracifiedCoreData.data | keyvalue">
-        <div class="col-sm-12 col-md-3  col-lg-3 pt-md-0 trasactionDataMobileResponsive" style="font-size: 18px; font-weight:500;"
+        <div class="col-sm-12 col-md-3  col-lg-3  pl-md-4  pt-3 pt-md-0 trasactionDataMobileResponsive" style="font-size: 18px; font-weight:500;"
           *ngIf="item.key != 'photos'">
           {{item.key}}
         </div>
